--- a/ejemplos/estilo1.css
+++ b/ejemplos/estilo1.css
@@ -3,6 +3,31 @@
 	box-sizing: border-box;
 }
 
+img {
+	
+	/* La imagen no se va a salir de su espacio */
+	max-width: 100%;
+	max-height: 100%; 
+
+}
+
+form {
+
+	display: flex;
+	flex-direction: column;
+}
+	form>div {
+
+		display: flex;
+	}
+		form>div>label{
+
+			width: 5em;
+		}
+
+		for>div>input{
+			flex-grow: 1;
+		}
 
 .btn {  /* Elementos con estilo de boton */
 
@@ -24,3 +49,8 @@
 
 		box-shadow: 0px 0px 5px #000;   /* Efecto para que parezca que estas pulsando */
 	}
+
+#ff>div>article {
+
+	width: 20em;
+}
