--- a/practica03/estilos/estilo.css
+++ b/practica03/estilos/estilo.css
@@ -1,7 +1,3 @@
-*{
-	box-sizing: border-box;
-}
-
 
 /* Pantallas grandes */
 @media screen and (min-width: 981px) {
@@ -10,7 +6,52 @@
 
 			border-right: 1px solid #2E3436FF;
 	}
+	
+	/* Cabecera */
+	#headerItems{
 
+      display: flex;
+      flex-direction: row;
+      padding: .8em 0;
+      height: 55px;
+      max-height: 60px;
+
+      text-align: center;
+      align-content: center;
+    }
+
+    	#headerItems>a{      
+	      margin-left: 0%;
+
+	      display: flex;
+	      align-items: center;
+    }
+
+    #headerItems>div{      
+	      flex: 1 9999 0%;
+	      margin-left: 2%;
+
+	      display: flex;
+	      flex-direction: row;
+	      align-items: center;
+	      
+    }
+
+    #headerItems>a>div>h1 {
+
+	    font-size: 21px;
+	    font-weight: 700;
+	    margin: 0 .2em;
+
+	   }
+
+	    #headerItems>div>h3 {
+
+	      font-size: 19px;
+          font-weight: 400;
+          margin-left: 0;
+
+	    }
 
 }
 
@@ -23,32 +64,114 @@
 			border-right: 1px solid #2E3436FF;
 	}
 
-
-
 }
 
 
-
-/* Pantallas pequeñas */
+/* Pantallas PEQUEÑAS */
 @media screen and (max-width: 480px) {
 
+/* Cabecera */
+#headerItems>a>div>h1 {
+			
+			margin-bottom: 2px;
+			margin-left: 4px;
+			font-size: 18px;
+	    	font-weight: 700;
 
-	#descripcion {
-
-		font-size: 1em;
-		color: #2E3436FF;
-		font-family: 'Source Serif Pro', serif;
-	}
 }
+
+
+#headerItems>div>h3 {
+
+          margin-top: 0;
+          margin-left: 4px;
+          font-size: 14px;
+	      font-weight: 700;
+
+}
+
+/* Cuerpo */
+	body>section>h2 {
+			
+			text-align: center;
+			font-size: 15px;
+
+	}
+	
+
+	/* Canvas con la zona de juego */
+	#zonaJuego {
+
+		width: 100%;  /* Siempre que la pantalla sea pequeña, la zona ocupa todo el ancho */
+		text-align: center;
+
+	}
+
+	#pieza1, #pieza2, #pieza3 {
+
+		width: 32%;
+	}
+
+		/* Zona puntuacion */
+		#puntuacion {
+
+			margin-left: 3px;
+		}
+
+} /* FIN TAM PEQUEÑA */
 
 
 
 /* Reglas css que se aplicaran a todos los tam de pantalla */
+*{
+	box-sizing: border-box;
+}
+
+/* Cabecera */
+	#headerItems{
+      max-width: 1040px;
+      margin: 0 auto;
+
+    }
+
+    	#headerItems>a{      
+	      
+	      font-family: 'Source Serif Pro', serif;
+	      text-decoration: none;
+   		}
+
+	    #headerItems>div{      
+		      
+		      font-family: 'Source Serif Pro', serif;
+		      text-decoration: none;
+	    }
+
+		    #headerItems>a>div>h1 {
 
 
+			  }
+
+			    #headerItems>div>h3 {
+
+		          text-align: left; 	/* Alineamos el texto a la izqd */
+
+			    }
+
+/* Cuerpo principal de la pagina */
 body {
+	
+	color: #000000;
+	background-color: #fafafa;
+	border-left: solid #ffffff; 
+  	border-right: solid #ffffff;
+  	border-bottom: solid #ffffff; 
 
-	font-family: 'Roboto', sans-serif;
+	width: 100%;
+  	font-size: 14px; /* Con esto se colocan en 2 por fila */
+  	margin: 0 auto ; /* Margen arriba/abajo 0 y decho/izqd auto */
+  	padding: 0; 
+  	font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 
 }
 
@@ -59,7 +182,33 @@ body {
 	  background-color: #ffffff;
 
 	}
+	
+	/* CANVAS DEL JUEGO */
+	#zonaJuego, #pieza1, #pieza2, #pieza3 {
 
+		border:  0.1em solid #000;
+
+	}
+
+	/*#panelJuego {
+			
+		float: left;
+
+	}
+	
+
+	#piezas {
+		
+		width: 50%;
+		float: left;
+	}
+ */
+
+footer {
+
+	text-align: center;
+	width: 100%;
+}
 /* TODOS LOS ENLACES DE LA PAGINA*/
  a {
  	cursor: pointer;  						/* Para que cambie el cursor del raton */
