--- a/practica03/estilos/estilo.css
+++ b/practica03/estilos/estilo.css
@@ -15,7 +15,6 @@
       padding: .8em 0;
       height: 55px;
       max-height: 60px;
-
       text-align: center;
       align-content: center;
     }
@@ -53,6 +52,61 @@
 
 	    }
 
+
+	
+	#panelJuego { 		/* Zona donde se colocan las piezas */
+
+		position: relative;
+		float: left;
+		width: 40%;
+		display: flex;
+		flex-direction: column;
+		margin-left: 25%;
+		margin-top: 1%;
+	
+	}
+
+		#panelJuego>h2 {
+
+			font-size: 20px;
+		}
+
+			#puntuacion>p {
+
+				font-size: 15px;
+			}
+
+	body {
+
+			overflow-x: hidden; 		/* Ocultamos la barra de abajo */
+	}
+
+		#zonaJuego {  /* Mapa de juego */
+
+			height: 550px;
+		}
+		
+		#zonaPiezas {  /* Zona donde se colocan las piezas */
+
+			float:  left;
+			display: flex;
+			flex-direction: column;
+			width: 15%;
+			height: 200px;
+			margin-top: 5%;
+			margin-left: 2%;
+		}
+
+			#zonaPiezas>h2 {
+
+				font-size: 18px;
+			}
+
+			#pieza1, #pieza2, #pieza3 {  /* Paneles de las piezas */
+
+				margin-bottom: 10%;
+			}
+
 }
 
 /* Pantallas medianas */
@@ -63,7 +117,24 @@
 
 			border-right: 1px solid #2E3436FF;
 	}
+	
+	
 
+	#panelJuego { 
+
+		text-align: center;
+
+	}
+
+		#zonaJuego {
+			width: 80%;
+		}
+
+	#pieza1, #pieza2, #pieza3 {
+
+		width: 32%;
+	}
+		
 }
 
 
@@ -89,14 +160,6 @@
 	      font-weight: 700;
 
 }
-
-/* Cuerpo */
-	body>section>h2 {
-			
-			text-align: center;
-			font-size: 15px;
-
-	}
 	
 
 	/* Canvas con la zona de juego */
@@ -182,12 +245,19 @@ body {
 	  background-color: #ffffff;
 
 	}
+
+	/* Cuerpo */
+	body>section>h2 {
+			
+			text-align: center;
+			font-size: 15px;
+
+	}
 	
 	/* CANVAS DEL JUEGO */
 	#zonaJuego, #pieza1, #pieza2, #pieza3 {
 
 		border:  0.1em solid #000;
-
 	}
 
 	/*#panelJuego {
@@ -204,10 +274,15 @@ body {
 	}
  */
 
+
+
 footer {
 
 	text-align: center;
 	width: 100%;
+	height: 5%;
+	position: absolute;
+	bottom: 0; 
 }
 /* TODOS LOS ENLACES DE LA PAGINA*/
  a {
