--- a/practica03/estilos/estilo.css
+++ b/practica03/estilos/estilo.css
@@ -58,7 +58,6 @@
 
 		position: relative;
 		float: left;
-		width: 40%;
 		display: flex;
 		flex-direction: column;
 		margin-left: 25%;
@@ -80,19 +79,12 @@
 
 			overflow-x: hidden; 		/* Ocultamos la barra de abajo */
 	}
-
-		#zonaJuego {  /* Mapa de juego */
-
-			height: 550px;
-		}
 		
 		#zonaPiezas {  /* Zona donde se colocan las piezas */
 
 			float:  left;
 			display: flex;
 			flex-direction: column;
-			width: 15%;
-			height: 200px;
 			margin-top: 5%;
 			margin-left: 2%;
 		}
@@ -102,7 +94,7 @@
 				font-size: 18px;
 			}
 
-			#pieza1, #pieza2, #pieza3 {  /* Paneles de las piezas */
+			#zonaPieza1, #zonaPieza2, #zonaPieza3 {  /* Paneles de las piezas */
 
 				margin-bottom: 10%;
 			}
@@ -130,7 +122,7 @@
 			width: 80%;
 		}
 
-	#pieza1, #pieza2, #pieza3 {
+	#zonaPieza1, #zonaPieza2, #zonaPieza3 {
 
 		width: 32%;
 	}
@@ -170,7 +162,7 @@
 
 	}
 
-	#pieza1, #pieza2, #pieza3 {
+	#zonaPieza1, #zonaPieza2, #zonaPieza3 {
 
 		width: 32%;
 	}
@@ -255,7 +247,7 @@ body {
 	}
 	
 	/* CANVAS DEL JUEGO */
-	#zonaJuego, #pieza1, #pieza2, #pieza3 {
+	#zonaJuego, #zonaPieza1, #zonaPieza2, #zonaPieza3 {
 
 		border:  0.1em solid #000;
 	}
@@ -267,7 +259,7 @@ body {
 	}
 	
 
-	#piezas {
+	#zonaPiezas {
 		
 		width: 50%;
 		float: left;
