--- a/practica03/estilos/estilo2.css
+++ b/practica03/estilos/estilo2.css
@@ -117,7 +117,7 @@ h2 {
 /* Ventana modal tabla puntuaciones */
 
 	/* The Modal (background) */
-	.modal, .modal2 {
+	.modal {
 
 	  display: none; /* Oculto por defecto hasta que se llame a la funcion */
 	  position: fixed; /* Que no se mueva del sitio */
@@ -159,29 +159,6 @@ h2 {
 			  cursor: pointer;
 			}
 
-		/* Boton de cerrar */
-		.close {
-		  color: #aaaaaa;
-		  float: right;
-		  font-size: 28px;
-		  font-weight: bold;
-		}
-
-		.close:hover,
-		.close:focus {
-		  color: #000;
-		  text-decoration: none;
-		  cursor: pointer;
-		}
-
-		/* Mensaje de error */
-		.error{
-  			font-weight: 400;
-		}
-		.error>span{
-  			color: red;
-		}
-
 /* Pie de pagina */
 footer {
 
@@ -195,53 +172,44 @@ footer {
 /* TODOS LOS ENLACES DE LA PAGINA*/
  a {
  	cursor: pointer;  						/* Para que cambie el cursor del raton */
- 	text-decoration: none;  				/* Quitamos el subrayado */
+ 	text-decoration: none;  
+ 	color: #438ec4;				/* Quitamos el subrayado */
  }
 
-/* Pantallas grandes */
-@media screen and (min-width: 981px) {
+a:visited{
+	color: #ed9449;
+}
 
-.titulo {
-
-			border-right: 1px solid #2E3436FF;
-	}
-	
 	/* Cabecera */
-	#headerItems{
+#headerItems{
+    display: flex;
+    flex-direction: row;
+    padding: .8em 0;
+    text-align: center;
+    align-content: center;
+}
 
-      display: flex;
-      flex-direction: row;
-      padding: .8em 0;
-      height: 55px;
-      max-height: 60px;
-      text-align: center;
-      align-content: center;
-    }
+#headerItems>a{      
+	margin-left: 0%;
+	display: flex;
+	align-items: center;
+}
 
-    	#headerItems>a{      
-	      margin-left: 0%;
-
-	      display: flex;
-	      align-items: center;
-    }
-
-    #headerItems>div{      
-	      flex: 1 9999 0%;
-	      margin-left: 2%;
-
-	      display: flex;
-	      flex-direction: row;
-	      align-items: center;
+#headerItems>div{      
+	flex: 1 9999 0%;
+	margin-left: 2%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 	      
-    }
+}
 
-    #headerItems>a>div>h1 {
+#headerItems>a>div>h1 {
 
-	    font-size: 21px;
-	    font-weight: 700;
-	    margin: 0 .2em;
-
-	   }
+	font-size: 21px;
+	font-weight: 700;
+	margin: 0 .2em;
+}
 
 	    #headerItems>div>h3 {
 
@@ -251,6 +219,33 @@ footer {
 
 	    }
 
+.titulo {
+
+			border-right: 1px solid #2E3436FF;
+			padding-right: 10px;
+	}
+
+/* Pantallas grandes */
+@media screen and (min-width: 981px) {
+
+
+}
+
+@media screen and (max-width: 981px) {
+
+	#headerItems{
+
+      display: flex;
+      flex-direction: row;
+      text-align: center;
+      align-content: center;
+    }
+
+    #headerItems>div>h3 {
+
+	     
+
+	}
 
 
 }
